Fix Issue 5: flyout menus collapse when color picker activated

--- a/svg-editor.css
+++ b/svg-editor.css
@@ -125,9 +125,6 @@
 .tools_flyout {
 	position: absolute;
 	display: none;
-	height: 28px;
-	width: 90px;
-	background: red;
 	cursor: pointer;
 	float: left;
 }
